Implement conversion and import functionality.

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.integration:spring-integration-sftp'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.7.5'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
