--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=FileImporter
+
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:8090/postgres
 spring.datasource.username=user
